err/hd-es-tools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/elasticsearch'...
Listing './lib/python3.5/site-packages/elasticsearch/client'...
Listing './lib/python3.5/site-packages/elasticsearch/connection'...
Listing './lib/python3.5/site-packages/elasticsearch/helpers'...
Listing './lib/python3.5/site-packages/elasticsearch-5.5.1.dist-info'...
Listing './lib/python3.5/site-packages/elasticsearch5'...
Listing './lib/python3.5/site-packages/elasticsearch5/client'...
Listing './lib/python3.5/site-packages/elasticsearch5/connection'...
Listing './lib/python3.5/site-packages/elasticsearch5/helpers'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/hd_es_tools'...
Listing './lib/python3.5/site-packages/hd_es_tools/es_sync'...
Listing './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_1_pgc'...
Compiling './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_1_pgc/fav_pgc_title.py'...
***   File "./lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_1_pgc/fav_pgc_title.py", line 59
    print "--data[%d|%d]%0.4f[%s]" % (curr / 100, count, curr / count, data)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_2_recipe'...
Compiling './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_2_recipe/fav_recipe_title.py'...
***   File "./lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_2_recipe/fav_recipe_title.py", line 59
    print "--data[%d|%d]%0.4f[%s]" % (curr / 100, count, curr / count, data)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_3_favdir'...
Compiling './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_3_favdir/fav_dir_title.py'...
***   File "./lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_3_favdir/fav_dir_title.py", line 59
    print "--data[%d|%d]%0.4f[%s]" % (curr / 100, count, curr / count, data)
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_sync'...
Compiling './lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_sync/task_sync_fav_title.py'...
***   File "./lib/python3.5/site-packages/hd_es_tools/es_sync/fav_title_sync/task_sync_fav_title.py", line 193
    print "Logging to %s." % logfile
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hd_es_tools/mongo_connector_doc_managers'...
Listing './lib/python3.5/site-packages/hd_es_tools/mongo_connector_doc_managers/formatters'...
Compiling './lib/python3.5/site-packages/hd_es_tools/tools.py'...
***   File "./lib/python3.5/site-packages/hd_es_tools/tools.py", line 15
    print command
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hd_es_tools-0.2.6.egg-info'...
Listing './lib/python3.5/site-packages/mongo_connector'...
Listing './lib/python3.5/site-packages/mongo_connector/doc_managers'...
Listing './lib/python3.5/site-packages/mongo_connector-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.21.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
